Correct a spacing issue

--- a/CSS/ main.css
+++ b/CSS/ main.css
@@ -17,5 +17,5 @@ h1 {
 
 article {
   font-style: italic;
-  colour: #666;
+  color: #666;
 }
